--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -123,3 +123,13 @@
     year = {2020},
     note = {First draft: June 15, 2020; Last update: December 24, 2020. Université de Mons, \url{https://angms.science/doc/CVX/Proj_simplex.pdf}}
 }
+
+@article{convexjl,
+    title = {Convex Optimization in {J}ulia},
+    author = {Udell, Madeleine and Mohan, Karanveer and Zeng, David and Hong, Jenny and Diamond, Steven and Boyd, Stephen},
+    year = {2014},
+    journal = {SC14 Workshop on High Performance Technical Computing in Dynamic Languages},
+    archivePrefix = "arXiv",
+    eprint = {1410.4821},
+    primaryClass = "math-oc",
+}
