Adjusted Q creation, missing experiments

--- a/report/report.tex
+++ b/report/report.tex
@@ -524,11 +524,15 @@ In order to test the program on different problem dimensions, we have chosen dif
     \hline
     \mathbf{n} & \mathbf{K} & \mathbf{\epsilon} & \mathbf{max\_iter} \\
     \hline
-    10 & \left[3,5,7\right] & 10^{-5} & 10000 \\
+    10 & \left[3,5,7\right] & 10^{-6} & 100000 \\
     \hline
-    100 & \left[25,50,75\right] & 10^{-5} & 10000 \\
+    50 & \left[13,25,37\right] & 10^{-6} & 100000 \\
     \hline
-    500 & \left[125,250,375\right] & 10^{-5} & 10000 \\
+    100 & \left[25,50,75\right] & 10^{-6} & 100000 \\
+    \hline
+    250 & \left[70,125,190\right] & 10^{-6} & 100000 \\
+    \hline
+    500 & \left[125,250,375\right] & 10^{-6} & 100000 \\
     \hline
   \end{tabular}  
 \end{center}
