--- a/report/report.tex
+++ b/report/report.tex
@@ -10,7 +10,7 @@
 % \usepackage{algorithmic}
 \usepackage{algpseudocode}% http://ctan.org/pkg/algorithmicx
 \usepackage[utf8]{inputenc}
-% \usepackage[left=3.2cm, right=3.2cm]{geometry}
+\usepackage[left=3.5cm, right=3.5cm]{geometry}
 \usepackage{accents}
 \usepackage{float}
 \usepackage{hyperref}
@@ -355,7 +355,7 @@ Regarding the minimum, this can be simply solved by differentiating the function
     \tag{Update \eqref{eqn:standard-rule}} \\
     \hat{\lambda}_{t+1} = -H_t^{-1} t\, \eta\, \overline{g}_t
     \tag{Update \eqref{eqn:primal-dual-update}} \\
-    \hat{\lambda}_{t+1} = \lambda_t + \eta\, H_t^{-1}\, g_t 
+    \hat{\lambda}_{t+1} = \lambda_t - \eta\, H_t^{-1}\, g_t 
     \tag{Update \eqref{eqn:composite-mirror-update}}
   \end{align}
 \end{subequations}
@@ -509,7 +509,7 @@ Putting everything together, we obtain a slightly different algorithm than \ref{
 \section{Implementation}
 The ideas above described have been implemented using Julia. The provided package give us the ability to provide the dimension of the problem $n$ and the number of simplices $K$ by input.\\
 Subsequently, the code is all automated and provide the creation of the matrix $Q \succeq 0$, $A$, the random sets $I^k$, the vector $q$ and all the required parameters. The resulting solutions 
-of the three different update rules are saved and compared with the optimal primal solution $f(x^*)$ found using the off-the-shelf solver \textit{Convex.jl} \cite{convexjl}.\\
+of the three different update rules are saved and compared with the optimal primal solution $f(x^*)$ found using the off-the-shelf solver \textit{JuMP.jl} \cite{DunningHuchetteLubin2017}.\\
 Also, there are some hyperparameters which can be modified by the user inside \textit{main.jl}, like the maximum number of iterations and the $\epsilon$ value to check the $\lambda$ residual.\\
 All the values assumed by $x$, $\lambda$, each $\lambda$-norm and $x$-norm residual, the number of iterations and the value of the Lagrangian function are saved at each iteration and displayed 
 step by step, and in the end stored in a \textit{csv} file and used to display a convergence plot (\textit{iterations} vs \textit{Lagrangian value}), a residual visualization plot of the 
@@ -532,14 +532,22 @@ In order to test the program on different problem dimensions, we have chosen dif
     \hline
     250 & \left[70,125,190\right] & 10^{-6} & 100000 \\
     \hline
-    500 & \left[125,250,375\right] & 10^{-6} & 100000 \\
-    \hline
+    % 500 & \left[125,250,375\right] & 10^{-6} & 100000 \\
+    % \hline
   \end{tabular}  
 \end{center}
 
 The code was executed using Julia \textit{REPL} tool. It has a slowish startup time, so the first execution are "warm-up" execution, but as soon as the entire code is compiled and the needed memory is computed, 
 then the next executions are much much faster. Then we suggest to do first executions with low magnitude of dimensions ($n=2$ and $K=\left[1,2\right]$) and ignore the results, and then start the experiments with 
-the values of the previous table.
+the values of the previous table.\\
+The creation of the matrix $Q$ and the starting value of the iterates $x$ and $\lambda$ are a key point for the algorithm. The matrix $Q$ is created using a support matrix $A\_help$ and a vector $vect$. $Q$ is 
+constructed using the eigenvalue decomposition $A\_help * vect * A\_help^{-1}$, by choosing an appropriate non singular matrix $A\_help$ and a vector of eigenvalues $vect$ which is filled with positive numbers,
+and a non-arbitrary number of zeros based on a certain probability.\\
+What has been observed is that having a very bad conditioned matrix $Q$ (with many $0$ eigenvalues) results in an unstable optimization, with the value of the Lagrangian and the gap oscillating between big positive 
+numbers and big negative ones.\\
+When instead $Q$ has a lower magnitude of $0$ eigenvalues or only positive eigenvalues, the problem is well conditioned and the values returned at each iteration are consistent.\\
+Another observation regard the subgradient. Being the $\phi$ non differentiable in the general case, the direction is not guaranteed to be ascent/descent. So we keep the best function value, best iteration, best $x$ 
+and $\lambda$ to get the suboptimal solution found.
 
 
 \newpage
@@ -678,7 +686,7 @@ And finally putting this into the main problem, we get:
 
 Utterly following the definition, we state that $s$ is a subgradient of $\psi$ at $\lambda_{t-1}$
 \[
-  \psi(y) \ge \psi(x) + s(y-x) \quad \forall y \in \mathbb{R}^n  
+  \psi(y) \le \psi(x) + s(y-x) \quad \forall y \in \mathbb{R}^n  
 \]
 having then 
 \[
@@ -689,11 +697,11 @@ In order to have our ascent direction of our dual function, we need to compute t
 \begin{align*}
   \dfrac{\partial \psi_\lambda(\lambda_{t-1})}{\partial \lambda_{t-1}}
 \end{align*}
-where the $\psi$ function coincide with the Lagrangian relaxation, hence
+Being everything constant except for the relaxed constraint, we have the subgradient with respect to the set of inequality constraints $h$ 
 \begin{align*}
-  \dfrac{\partial}{\partial \lambda_{t-1}} x^T Q x + q x - \left\langle \lambda_{t-1},x \right\rangle
+  \dfrac{\partial h(\lambda_{t-1})}{\partial \lambda_{t-1}} = \dfrac{\partial}{\partial \lambda_{t-1}} - \left\langle \lambda_{t-1},x \right\rangle
 \end{align*}
-Assuming we are at step $t$ of our iterations, then we will use the primal variable $x_{t-1}$ obtained in the previous step. As a consequence the gradient is simply given by
+Assuming we are at step $t$ of our iterations, then we will use the primal variable $x_{t-1}$ obtained in the previous step. As a consequence, the gradient is simply given by
 \[
   \dfrac{\partial \psi_\lambda(\lambda_{t-1})}{\partial \lambda_{t-1}} = - x_{t-1}
 \]
